fixed some alignment issues

--- a/src/components/play/brick/live/Live.scss
+++ b/src/components/play/brick/live/Live.scss
@@ -41,14 +41,7 @@
   }
   .stepper {
     .step {
-      cursor: pointer;
-      font-size: 2vw;
-      font-family: $font-family-black;
       color: #d3d4d5;
-    }
-
-    .step.completed, .step.current {
-      color: $dark-blue;
     }
   }
   .edited-step-icon {
